app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-app-deployment
spec:
  selector:
    matchLabels:
      app: board
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: board
    spec:
      containers:
      - name: board
        # change the app image here
        image: dannyh79/phx-board-app:0.1.0
        ports:
        - containerPort: 4000
