app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: board-app-service
spec:
  selector:
    app: board
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
